--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -22,6 +22,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <receiver android:name="mobisocial.socialkitdemo.MessageReceiver">
+            <intent-filter>
+		        <action android:name="mobisocial.intent.action.DATA_RECEIVED"/>
+		    </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
